# Sistema-de-Gerenciamento-de-Denuncias-Urbanas

./: .gitignore  README.md  alembic.ini  carga_inicial.py  divisao_tarefas.txt  pyproject.toml  requerimentos.txt  seed.py
app/: main.py  ver_dados.py
app/api/: denuncia_routes.py  hash_routes.py
app/core/: __init__.py  config.py  database.py
app/models/: __init__.py  atendimento.py  categoria.py  denuncia.py  models.py  status.py  usuario.py
app/persistence/: delta_storage.py  denuncia_repository.py  seq_manager.py
app/routers/: __init__.py  atendimentos.py  categorias.py  denuncias.py  documents.py  localizacoes.py  status.py  usuarios.py
data/: denuncias.seq
data/denuncias/: 0-2b55dd9d-32fb-47e4-997a-8dff7c04ce24-0.parquet  0-fdc88103-432d-4161-a745-d1e1681c4cde-0.parquet  4-e21edde1-872b-4953-b666-cd43ee62d405-0.parquet  5-b719886e-fe3d-4b97-84f4-77c21b066571-0.parquet  6-97bbf1b5-6404-420d-88fb-e4ddebb3e950-0.parquet  7-61d8d378-37c2-4aa0-9757-54b53e2e08e4-0.parquet  part-00001-57db1be9-c8c5-47d3-8e48-cbc18054f21e-c000.snappy.parquet  part-00001-d9ebb753-3754-4dcc-b52c-867305262434-c000.snappy.parquet
migrations/: env.py
migrations/versions/: 0001_initial.py
scripts/: popular.py
sistema_gerenciamento_denuncias.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
