[project]
name = "sistema-gerenciamento-denuncias"
version = "0.1.0"
description = "API REST com FastAPI e Delta Lake para gerenciamento de denúncias urbanas"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.111.1",
    "uvicorn[standard]==0.24.0",
    "deltalake==0.16.0",
    "pydantic>=2.10.0,<2.11.0",
    "faker==23.3.0",
    "pandas"
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.2",
    "pytest-asyncio==0.22.0",
    "httpx==0.27.0",
    "black==24.10.0",
    "ruff==0.1.0",
    "python-dotenv==1.0.0"
]